# segger_dev

./: .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  Dockerfile  LICENSE  README.md  config.yaml  environment-rapids.yml  environment.yml  index.html  index.md  mamba_environment.yml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  submit_job.py  submit_job.sh
.dev/: _get_imports.py
.github/ISSUE_TEMPLATE/: ➕-performance-improvement.md  🐛-bug-report.md  🚀-feature-request.md
.github/workflows/: python-publish.yml  static.yml
.scripts/: create_dataset.py  create_dataset.sh  predict.py  train_model.py  train_model.sh
_build/html/: genindex.html  index.html  search.html  searchindex.js
_build/html/_modules/: predict.html  train_model.html  utils.html
_build/html/_sources/: index.rst
_build/html/_static/: documentation_options.js
_build/html/user_guide/: examples.html  index.html  installation.html  usage.html
api/: index.html
api/cli/: index.rst
api/data/: index.html  index.md
api/data/_utils/: _utils.md  index.html
api/data/api_reference/: api_reference.md  index.html
api/data/constants/: index.html  index.md
api/data/io/: index.html  index.md
api/data/ndtree/: index.html  ndtree.md
api/data/pyg_dataset/: index.html  pyg_dataset.md
api/data/sample/: index.html  sample.md
api/data/transcript_embedding/: index.html  transcript_embedding.md
api/data/utils/: index.html
api/models/: index.html  index.md
api/models/api_reference/: api_reference.md  index.html
api/models/architecture/: architecture.md  index.html
api/models/inference/: index.html  inference.md
api/models/segger_model/: index.html  segger_model.md
api/models/training/: index.html  training.md
api/prediction/: index.html  index.md
api/segger/models/: index.rst
api/training/: index.html
api/training/train/: index.rst
api/validation/: index.html  index.md
api/validation/xenium_explorer/: index.rst
cli/: index.html
css/: extra.css
docs/: Makefile  cli.md  conf.py  index.md  index.rst  installation.md  usage.rst
docs/_build/html/: .buildinfo  cli.html  installation.html  objects.inv  py-modindex.html
docs/api/: data.md  index.md  index.rst  models.md  prediction.md  segger.md  train.md  validation.md
docs/api/create_dataset/: index.rst
docs/api/data/: index.md
docs/api/prediction/: index.md
docs/api/train_model/: index.rst
docs/api/training/: index.md
docs/api/utils/: index.rst
docs/css/: extra.css
docs/notebooks/: README.md  benchmark_bc.ipynb  benchmark_bc.py  compare_cell_clustering.py  create_dataset.ipynb  gene_cell_attention_clustering_comparison.ipynb  gene_cell_cluster_annotation.ipynb  gene_gene_attention_visualization.ipynb  main.py  process_dataset.py  run_gene_cell_clustering.py  run_gene_clustering.py  segger_tutorial.ipynb  segger_tutorial.py  spatial_attention_visualization.ipynb  spatial_plot.py  test_dendrogram_ordering.py  train_model.ipynb  visualization.ipynb  visualization.py
docs/notebooks/scripts/: gene_cell_attention_processing.py  gene_cell_clustering_comparison_processing.py  gene_gene_attention_processing.py  spatial_attention_processing.py
docs/notebooks/visualization/: __init__.py  attention_data_processing.py  batch_visualization.py  gene_cell_clustering.py  gene_clustering.py  gene_embedding.py  gene_visualization.py  interactive_attention.py  spatial_visualization.py  transcript_visualization.py  utils.py
docs/source/: conf.py
docs/user_guide/: index.md  training.md  usage.rst  validation.md
guides/: platform_preparation_guide.ipynb  run_guide.ipynb
guides/example_configs/: merscope_config.yaml  xenium_config.yaml
guides/nanostring_cosmx/: segment_cosmx_nuclei.py
guides/vizgen_merscope/: README.md  vpt_cellpose_nuclear_segmentation.json
installation/: index.html  installation.md
notebooks/benchmark_bc/: benchmark_bc.py  index.html
notebooks/segger_tutorial/: index.html  segger_tutorial.ipynb
platform_guides/: platform_preparation_guide.ipynb
platform_guides/nanostring_cosmx/: README.md  segment_cosmx_nuclei.py
platform_guides/vizgen_merscope/: README.md  vpt_cellpose_nuclear_segmentation.json
scripts/: 0_data_creation_5k_nucleus.py  1_train_5k.py  2_predict_5k.py  4_xenium_explorer.py  config.yaml  create_data_cosmx.py  create_data_fast_sample.py  create_data_merscope.py  create_data_sample.py  create_dataset.py  create_dataset.sh  create_dataset_2.py  create_dataset_cli.sh  create_tile_parquet.py  create_tile_speed.py  create_tile_speed_iter.py  create_toy_datasets.py  full_workflow.py  import os.py  predict.py  predict_5k_yiheng.py  predict_model_cuda.py  predict_model_sample.py  predict_project24.py  sand.py  sandbox.py  spatialdata_example.py  submit_job.py  train_MNG_5k.sh  train_cosmx.py  train_mimmo_batch.py  train_model.py  train_model.sh  train_model_sample.py  train_yiheng_5k.py
scripts/batch_run_xenium/: create_data_batch.py  create_data_batch.sh  create_data_batch_BrM.sh  create_data_batch_EwS.sh  create_data_batch_GB.sh  predict_batch.py  predict_batch.sh  train_batch.py  train_batch.sh  train_batch_BrM.sh  train_batch_EwS.sh  train_batch_GB.sh
search/: search_index.json
source/conf/: conf.py  index.html
src/segger/: __init__.py
src/segger/cli/: cli.py  create_dataset.py  create_dataset_fast.py  predict.py  predict_fast.py  train_model.py  utils.py
src/segger/config/: __init__.py  config.py  utils.py
src/segger/data/: README.md  Untitled-4.py  __init__.py  _ndtree.py  constants.py  data_module.py  io.py  utils.py  xenium_rapids.py  xenium_sample.py  xenium_sample_parquet.py  xenium_utils.py
src/segger/io/: _enum.py  _utils.py  (+2 more)
tests/: conftest.py  test_data.py  test_model.py  test_parquet.py  test_pipeline.py  test_prediction.py  test_skipgat.py  test_training.py
tests_v2/: test_embeddings.py
user_guide/: index.html  index.md
user_guide/data_creation/: data_creation.md  index.html
user_guide/training/: index.html
user_guide/validation/: index.html
(+167 files in other folders)
