[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segger"
version = "0.1.0"
description = "Fast and accurate cell segmentation for single-molecule spatial omics"
authors = [
    { name = "Elyas Heidari", email = "elyas.heidari@dkfz-heidelberg.de" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["segmentation", "deep learning", "pytorch", "geometric deep learning"]

dependencies = [
    "torch>=2.0.0",  
    "dask-cuda>=23.10.0",  
    "distributed>=2023.10.0",  
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "tqdm>=4.61.0",
    "torchvision>=0.10.0",
    "lightning>=1.9.0",
    "torchmetrics>=0.5.0",
    "scanpy>=1.9.3",
    "squidpy==1.2.0",
    "adjustText>=0.8",
    "scikit-learn>=0.24.0",
    "geopandas>=0.9.0",
    "shapely>=1.7.0",
    "path>=17.0.0",
    "pyarrow>=16.1.0,<16.2.0",
    "dask_geopandas>=0.4.0",
    "torch-geometric>=2.2.0",
    "pqdm>=0.2.0",
    "rtree>=1.3.0",
]

[project.optional-dependencies]
faiss = [
    "faiss-cpu>=1.7.0",
    "faiss-gpu>=1.7.0"
]

rapids11 = [
    "cupy-cuda11x",
    "cuvs-cu11==24.4.*",
]

rapids12 = [
    "cupy-cuda12x",
    "cuvs-cu12==24.4.*",
]

multiprocessing = ["multiprocessing"]

dev = [
    "pytest",
    "black",
    "flake8",
    "pre-commit",
    "twine>=4.0.2"
]

docs = [
    "docutils>=0.8,!=0.18.*,!=0.19.*",
    "sphinx>=4.1",
    "sphinx-book-theme>=1.0.0",
    "myst-nb",
    "myst-parser",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "sphinxext-opengraph",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-hoverxref",
    "ipykernel",
    "ipython",
    "pandas"
]

tests = [
    "pytest",
    "coverage"
]

[project.urls]
bug_tracker = "https://github.com/EliHei2/segger_dev/issues"
documentation = "https://EliHei2.github.io/segger_dev"
source_code = "https://github.com/EliHei2/segger_dev"
homepage = "https://EliHei2.github.io/segger_dev"
repository = "https://github.com/EliHei2/segger_dev"

[tool.setuptools]
packages = ["segger"]
package-dir = {"" = "src"}

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
