[project]
name = "segger"
version = "0.1.0"
description = "Fast and accurate cell segmentation of imaging-based spatial transcriptomics data"
authors = [
    { name = "Elyas Heidari", email = "elyas.heidari@dkfz-heidelberg.de" },
    { name = "Andrew Moorman", email = "moormana@mskcc.org" },
    { name = "Daniel Unyi", email = "daniel.unyi.42@gmail.com" }
]
keywords = ["segmentation", "deep learning", "pytorch", "geometric deep learning"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "click>=8.1.8",
    "geopandas>=1.0.1",
    "numpy>=1.2.4,<2.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "scipy>=1.15.2",
    "shapely>=2.0.7",
    "torch-geometric>=2.6.1",
    "scikit-learn>=1.6.1",
    "pyyaml>=6.0.2",
    "pqdm>=0.2.0",
    "scanpy>=1.10.4",
    "dask>=2025.3.0",
    "rtree"
]

[project.optional-dependencies]
dask = [
    "dask>=2025.3.0",
    "dask-geopandas>=0.4.3",
]
dev = [
    "pytest>=8.3.5",
    "jupyter>=1.1.1",
    "pytest-dependency>=0.6.0",
]
validate = [
    "anndata>=0.11.4",
    "matplotlib>=3.10.1",
    "scanpy>=1.10.4",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
